@startuml
interface IEventHandler {
  #handleEvent(Event event)
}

class IHeightSensor << HAL >> {
  -int adcOffset
  -int adcIncPerMillimeter
  -std::function<void(float)> onNewValueCallback
  -std::vector<int> window
  -bool running
  #calibrateOffset(int offsetValue)
  #calibrateReference(int refValue)
}

enum WorkpieceType {
	WS_F
	WS_OB
	WS_BOM
	WS_BUM
	WS_UNKNOWN
}

class HeightSensor << HAL >> {
	-TSCADC tsc
	-ADC* adc
	-bool running
	-int nMeasurements
	-addValue(int value)
	-threadFunction()
	-float adcValueToMillimeter(int adcValue)
	+registerOnNewValueCallback(std::function<void(float)> cb)
	+unregisterOnNewValueCallback()
	+handleEvent(Event event)
	+start()
	+stop()
	+float getAverageHeight()
	+int getLastRawValue()
}

IHeightSensor <|.. HeightSensor

class HeightContext {
	-HeightActions* actions
	-HeightContextData* data
	-HeightBasestate* state
  -EventManager* eventManager
	-IHeightSensor* sensor
	-bool running
	+HeightContext(EventManager* mngr, IHeightSensor* sensor)
	+handleEvent(Event event)
	+heightValueReceived(float value)
	+HeightResult getCurrentResult()
	-subscribeToEvents()
}

class HeightActions {
	-HeightContextData* data
	-EventManager* eventManager
  -bool isMaster
	+HeightActions(HeightContextData* data, EventManager* mngr)
	+sendMotorSlowRequest(bool slow)
	+sendHeightResult()
}

struct HeightResult {
	+WorkpieceType type
	+float averageValue
}

class HeightContextData {
	-float avgValue
	-int nMeasurements
	-std::vector<float> measurements
  +HeightContextData()
	+resetMeasurement()
	+addValue(float value)
	+float getAverageValue()
	+HeightResult getCurrentResult()
	+{static} bool isFlat(float value)
	+{static} bool isHigh(float value)
	+{static} bool isHole(float value)
	+{static} bool isUnknown(float value)
}

HeightResult -* HeightContextData
HeightActions -o HeightContext
HeightContextData --o HeightContext
HeightContextData --o HeightActions
WorkpieceType .. HeightContextData
HeightContext *- HeightSensor
IEventHandler <|.. HeightContext
IEventHandler <|.. HeightSensor

@enduml